[gd_scene load_steps=21 format=3 uid="uid://eohakdnrdwq3"]

[ext_resource type="Script" uid="uid://cjvojr150dpgd" path="res://scripts/bat.gd" id="1_vjjhm"]
[ext_resource type="PackedScene" uid="uid://bqhlm5rolw1xo" path="res://scenes/injury_zone.tscn" id="2_lv0ya"]
[ext_resource type="Texture2D" uid="uid://d1m81i6qnmuby" path="res://assets/sprites/bat/bat_idle.png" id="3_n8eff"]
[ext_resource type="Texture2D" uid="uid://drqaj38tdepg7" path="res://assets/sprites/bat/bat01.png" id="4_rrah6"]
[ext_resource type="Texture2D" uid="uid://oixptdeief0l" path="res://assets/sprites/bat/bat02.png" id="5_drkvk"]
[ext_resource type="Texture2D" uid="uid://b0e2clpvo6wwr" path="res://assets/sprites/bat/bat03.png" id="6_y1j7x"]
[ext_resource type="Texture2D" uid="uid://bqiaejkfnp8ro" path="res://assets/sprites/bat/bat04.png" id="7_dk2sj"]
[ext_resource type="Texture2D" uid="uid://dwrdn3cn78pb5" path="res://assets/sprites/bat/bat05.png" id="8_fjde2"]
[ext_resource type="Texture2D" uid="uid://dh4k5xsbapaes" path="res://assets/sprites/bat/bat06.png" id="9_qyo3s"]
[ext_resource type="Texture2D" uid="uid://pebtruayygiw" path="res://assets/sprites/bat/bat07.png" id="10_twcdg"]
[ext_resource type="Texture2D" uid="uid://bav36lrsyjd3e" path="res://assets/sprites/bat/bat08.png" id="11_p43al"]
[ext_resource type="Texture2D" uid="uid://bimbq7ikbfjhg" path="res://assets/sprites/bat/bat09.png" id="12_v45h3"]
[ext_resource type="PackedScene" uid="uid://bp4wth67tkg1y" path="res://scenes/persist/bat_serializable_component.tscn" id="13_n8eff"]
[ext_resource type="AudioStream" uid="uid://bloisc07wnr2t" path="res://assets/sounds/bat-chirp-close-up-29644.mp3" id="14_rrah6"]
[ext_resource type="PackedScene" uid="uid://gra5myrijv4y" path="res://scenes/damage/damage_receiver_component.tscn" id="16_dk2sj"]
[ext_resource type="PackedScene" uid="uid://c0vqm5i8ior2w" path="res://scenes/blood_particles.tscn" id="16_y1j7x"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c78co"]
radius = 7.0
height = 14.0

[sub_resource type="SpriteFrames" id="SpriteFrames_j0w84"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_rrah6")
}, {
"duration": 1.0,
"texture": ExtResource("5_drkvk")
}, {
"duration": 1.0,
"texture": ExtResource("6_y1j7x")
}, {
"duration": 1.0,
"texture": ExtResource("7_dk2sj")
}, {
"duration": 1.0,
"texture": ExtResource("8_fjde2")
}, {
"duration": 1.0,
"texture": ExtResource("9_qyo3s")
}, {
"duration": 1.0,
"texture": ExtResource("10_twcdg")
}, {
"duration": 1.0,
"texture": ExtResource("11_p43al")
}, {
"duration": 1.0,
"texture": ExtResource("12_v45h3")
}],
"loop": true,
"name": &"dying",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_n8eff")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_rrah6")
}, {
"duration": 1.0,
"texture": ExtResource("5_drkvk")
}, {
"duration": 1.0,
"texture": ExtResource("6_y1j7x")
}, {
"duration": 1.0,
"texture": ExtResource("7_dk2sj")
}, {
"duration": 1.0,
"texture": ExtResource("8_fjde2")
}, {
"duration": 1.0,
"texture": ExtResource("9_qyo3s")
}, {
"duration": 1.0,
"texture": ExtResource("10_twcdg")
}, {
"duration": 1.0,
"texture": ExtResource("11_p43al")
}, {
"duration": 1.0,
"texture": ExtResource("12_v45h3")
}],
"loop": true,
"name": &"move",
"speed": 22.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vjjhm"]
radius = 45.0
height = 144.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrah6"]
size = Vector2(18, 18.5)

[node name="Bat" type="CharacterBody2D"]
script = ExtResource("1_vjjhm")

[node name="InjuryZone" parent="." instance=ExtResource("2_lv0ya")]
unique_name_in_owner = true
position = Vector2(0, 5)
injury_strength = 10.0
injury_zone_type = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InjuryZone"]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_c78co")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 6)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_j0w84")
animation = &"dying"
autoplay = "idle"

[node name="RayCastRightBottom" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 5)
target_position = Vector2(16, 11)

[node name="RayCastLeftBottom" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 5)
target_position = Vector2(-16, 11)

[node name="RayCastLeftTop" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 5)
target_position = Vector2(-16, -13)

[node name="RayCastRigthTop" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 5)
target_position = Vector2(16, -13)

[node name="DetectionZone" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
position = Vector2(-1, 62)
shape = SubResource("CapsuleShape2D_vjjhm")

[node name="BatSerializableComponent" parent="." instance=ExtResource("13_n8eff")]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("14_rrah6")
max_distance = 800.0

[node name="BeingHitCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 3.25)
shape = SubResource("RectangleShape2D_rrah6")

[node name="BloodParticles" parent="." instance=ExtResource("16_y1j7x")]
unique_name_in_owner = true

[node name="RayCastDown" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(0, 12)

[node name="DamageReceiverComponent" parent="." instance=ExtResource("16_dk2sj")]
position = Vector2(-7, -12)
initial_life_counter = 50.0

[connection signal="body_entered" from="DetectionZone" to="." method="_on_detection_zone_body_entered"]
[connection signal="damage_received" from="DamageReceiverComponent" to="." method="_on_damage_receiver_component_damage_received"]
[connection signal="killed" from="DamageReceiverComponent" to="." method="_on_damage_receiver_component_killed"]
